tests/paczka1/fuzzy1/95769872.err
Error in line 12: 3IU0q2n A491 125,73
Error in line 10: yfyxvEaMUfO S458 65,2
Error in line 15: o5Z73rXuopr S94 75,4
Error in line 29: yfyxvEaMUfO A491 44,1
